--- a/app/src/main/res/menu/menu_new_location.xml
+++ b/app/src/main/res/menu/menu_new_location.xml
@@ -1,12 +1,13 @@
+<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".activities.MainActivity">
     <item
-        android:id="@+id/action_connect"
-        android:orderInCategory="80"
-        android:title="@string/login"
-        app:showAsAction="ifRoom" />
+        android:id="@+id/action_save"
+        android:orderInCategory="90"
+        android:title="@string/save"
+        app:showAsAction="ifRoom|withText"/>
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
