--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -23,9 +23,21 @@
     <dimen name="button_height_normal">40dp</dimen>
     <dimen name="button_height_short">32dp</dimen>
 
+    <!-- margins -->
+    <dimen name="margin_small">0dp</dimen>
+    <dimen name="margin_normal">8dp</dimen>
+    <dimen name="margin_large">16dp</dimen>
+
+    <!-- list item row heights -->
     <dimen name="item_list_two_rows">72dp</dimen>
 
+    <!-- recycler -->
     <dimen name="start_offset">16dp</dimen>
     <dimen name="end_offset">16dp</dimen>
     <dimen name="divider_size">8dp</dimen>
+
+
+    <dimen name="text_size_large">16sp</dimen>
+    <dimen name="text_size_normal">13sp</dimen>
+    <dimen name="imge_book_detail">80dp</dimen>
 </resources>
